@startuml
class App{
start()
main()
}

class WindowController{
- userInventory: Inventory
- iv: InputValidator
- dm: DialogManager
- fm: FileManager

+mOpen()
+mSave()
+mSearchName()
+mSearchSerial()
+bAddItem()
+bDeleteItem()
+initialize()
+updateTableView()
+bEdit()
+bViewAll()

}

class DialogManager{
+reportErrorItem()
+reportError()
+getEditItemDialog()
+getSearchDialog()
}

class FileManager{
-html: HTMLFiles
-tsv: TSVFiles
-json: JSONFIles
+saveInventory()
+loadInventory()
+parseFileData()
}

class Inventory{
- catalog: ArrayList<Item>

+addItem()
+removeItem()
+editItem()
+searchSerial()
+searchName()
+getCatalog()
}

class Item{
-name: SimpleStringProperty
-serialNumber: SimpleStringProperty
-value: SimpleStringProperty

+getName()
+setName()
+getSerialNumber()
+getValue()
+setValue()
+formatValue()
}

class InputValidator{
+ checkValue()
+ checkUniqueSerial()
+ checkFormatSerial()
+ checkNameLength()
}

class HTMLFiles{
+formatHTMLString()
+formatHTMLHeading()
+formatHTMLFooter()
+parseHTML()
}

class TSVFiles{
+formatTSV()
+parseTSV()
}

class JSONFIles{
+formatJSONString()
+formatJSONHeader()
+formatJSONFooter()
+parseJSON()
}


org.javafx.Application <|-- App
App -- WindowController
WindowController o-- DialogManager
WindowController o-- FileManager
WindowController o-- Inventory
Inventory *-- Item
WindowController o-- InputValidator
FileManager *-- HTMLFiles
FileManager *-- TSVFiles
FileManager *-- JSONFIles
@enduml